update: questの型の置き換え
